# matrixschema

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/matrix_fn_schema/: __init__.py  schema.py
src/matrixschema/: __init__.py  schema.py
