[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "matrixschema"
dynamic = ["version"]
description = "Python function signatures to OpenAI-compatible JSON Schema"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["openai", "json-schema", "function-calling", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "docstring-parser>=0.16",
]

[project.optional-dependencies]
pydantic = ["pydantic>=2"]

[tool.setuptools.dynamic]
version = {attr = "matrixschema.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["matrixschema*"]
